feat&fixed: fixed bugs and add management platform CPU and memory monitoring, add user daily growth and video posting number daily growth statistics
