# docs/swagger.json
@@ -23,14 +23,14 @@
                         "type": "integer",
                         "description": "feed类型",
                         "name": "type",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "最新时间",
                         "name": "latest_time",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -302,7 +302,7 @@
                         "type": "integer",
                         "description": "目标用户id",
                         "name": "to_user_id",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -475,19 +475,19 @@
                         "type": "integer",
                         "description": "页码",
                         "name": "page",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "每页数量",
                         "name": "limit",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "视频id",
                         "name": "video_id",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -563,8 +563,15 @@
                     },
                     {
                         "type": "string",
-                        "description": "密码",
+                        "description": "旧密码",
                         "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "新密码",
+                        "name": "new_password",
                         "in": "formData",
                         "required": true
                     },
@@ -606,14 +613,14 @@
                         "type": "string",
                         "description": "搜索关键字",
                         "name": "key",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "搜索类型",
                         "name": "type",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -748,6 +755,62 @@
                 }
             }
         },
+        "/api/v1/system/cpu/usage": {
+            "get": {
+                "summary": "获取CPU使用率",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/system/memory/usage": {
+            "get": {
+                "summary": "获取内存使用率",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/": {
             "get": {
                 "description": "获取用户信息",
@@ -820,7 +883,50 @@
                 }
             }
         },
-        "/api/v1/user/search": {
+        "/api/v1/user/increase": {
+            "get": {
+                "description": "获取月总日用户增长记录列表",
+                "summary": "获取月总日用户增长记录列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "年份",
+                        "name": "year",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "月份",
+                        "name": "month",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/list": {
             "get": {
                 "description": "获取用户列表",
                 "summary": "获取用户列表",
@@ -836,20 +942,19 @@
                         "type": "string",
                         "description": "关键字",
                         "name": "key",
-                        "in": "formData",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "页码",
                         "name": "page",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "每页数量",
                         "name": "limit",
-                        "in": "formData"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -900,8 +1005,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "头像",
+                        "description": "头像地址",
                         "name": "avatar",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "个性签名",
+                        "name": "signature",
                         "in": "formData"
                     }
                 ],
@@ -957,10 +1068,46 @@
                 }
             }
         },
-        "/api/v1/video/delete": {
-            "delete": {
-                "description": "取消视频上传",
-                "summary": "取消视频上传",
+        "/api/v1/user/upload/avatar/abolish": {
+            "post": {
+                "description": "取消头像上传",
+                "summary": "取消头像上传",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "用户id",
+                        "name": "user_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/video/increase": {
+            "get": {
+                "description": "获取月总日视频发布数增长记录列表",
+                "summary": "获取月总日视频发布数增长记录列表",
                 "parameters": [
                     {
                         "type": "string",
@@ -971,23 +1118,16 @@
                     },
                     {
                         "type": "string",
-                        "description": "标题",
-                        "name": "title",
-                        "in": "formData",
+                        "description": "年份",
+                        "name": "year",
+                        "in": "query",
                         "required": true
                     },
                     {
-                        "type": "boolean",
-                        "description": "是否有视频",
-                        "name": "haveVideo",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "是否有封面",
-                        "name": "haveCoverImage",
-                        "in": "formData",
+                        "type": "string",
+                        "description": "月份",
+                        "name": "month",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -1129,6 +1269,56 @@
                 }
             }
         },
+        "/api/v1/video/upload/abolish": {
+            "post": {
+                "description": "取消视频上传",
+                "summary": "取消视频上传",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "标题",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否有视频",
+                        "name": "haveVideo",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否有封面",
+                        "name": "haveCoverImage",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/video/upload/image": {
             "post": {
                 "description": "上传视频封面",
@@ -1212,6 +1402,23 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "api.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         }
